# ArchShell

./: .gitignore  QUICKSTART.sh  README.md  cli.py  pyproject.toml
command_hero/: __init__.py  core.py
tests/: test_core.py
