[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "command-line-hero"
version = "1.0.0"
description = "A feature-rich text-based command-line interface"
authors = [{name = "Command Hero Team"}]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
